src/main/java/com/plugin/dte/Dte.bnf
{
    parserClass="com.plugin.dte.parser.DteParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Dte"
    psiImplClassSuffix="Impl"
    psiPackage="com.plugin.dte.psi"
    psiImplPackage="com.plugin.dte.psi.impl"

    elementTypeHolderClass="com.plugin.dte.psi.DteTypes"
    elementTypeClass="com.plugin.dte.psi.DteElementType"
    tokenTypeClass="com.plugin.dte.psi.DteTokenType"

    tokens=[
        space='regexp:\s+'
        LP = '('
        RP = ')'
        SEMICOLON = ':'
        THREAD_COMPLETE = "complete_thread"
        THREAD_CREATE = "create_thread"
        MAIN_TID = "main"
        MTX_LOCK = "mutex_lock"
        MTX_UNLOCK = "mutex_unlock"
        ID = 'regexp:[A-Z][a-zA-Z0-9]*'
    ]
}

dteFile ::= <<dteSequenceDescription MAIN_TID>> ( <<dteSequenceDescription (ID | MAIN_TID)>> ) * <<eof>>

meta list ::= <<param>> ( <<param>> ) *
meta dteSequenceDescription ::= <<param>> SEMICOLON <<list synchronization_action>>

synchronization_action ::= (THREAD_COMPLETE LP (ID | MAIN_TID) RP) | (THREAD_CREATE LP (ID | MAIN_TID) RP) | MTX_LOCK | MTX_UNLOCK
